style.css
:root {
  --main-color: #00cc7e;
  --shadow-color: rgba(0, 0, 0, 0.4);
  --background-color: #fff;
  --box-shadow: 1px 1px 0px 0px var(--shadow-color);
}

body {
  font-family: 'Fira Sans', sans-serif;
}

/* It is a wrong thing to do, however we indicate focused elements with rotation */
input:focus {
  outline: none;
}

.main {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.user-score {
  display: grid;
  grid-gap: 10px;
  grid-template-columns: repeat(3, minmax(50px, 1fr));
  grid-template-rows: repeat(3, minmax(50px, 1fr));
  grid-auto-rows: minmax(50px, 1fr);
}

.score-box {
  display: grid;
  grid-template-rows: 40% 1fr;
  background-color: var(--main-color);
  padding: 15px;
  cursor: pointer;
  border-radius: 5px;
  border: none;
  color: var(--background-color);
  font-size: 20px;
  text-align: center;
}

.score-box:focus-within {
  outline: none;
  transform: rotate(1deg);
  transition: transform 1s ease 0s;
}

.score-box:hover {
  box-shadow: var(--box-shadow);
}

.score {
  position: absolute;
  left: -9999px;
}

.score + span {
  content: '';
  display: inline-block;
  height: 20px;
  width: 20px;
  background-color: var(--background-color);
  border-radius: 100%;
}

.score-box:hover span::before {
  box-shadow: var(--box-shadow);
}

.score:checked + span::before,
.score:not(:checked) + span::before {
  content: '';
  display: block;
  margin-top: 5px;
  margin-left: 5px;
  height: 10px;
  width: 10px;
  background-color: var(--main-color);
  border-radius: 100%;
  opacity: 1;
}

.score:not(:checked) + span::before {
  opacity: 0;
}

.score-submit-btn {
  grid-column: 1 / -1;
}

.score-box--hastextinput {
  color: var(--main-color);
  background-color: var(--background-color);
  grid-column: span 2;
  text-align: initial;
  border: 1px solid var(--main-color);
  font-size: initial;
}

